# ctrcompat

./: .gitignore  CMakeLists.txt
Include/CTR/: Allocator.h  Assert.h  Break.h  Cache.h  Defs.h  Impl.h  Log.h  Sync.h  Unreachable.h
Source/: HOS.c  QTMRAM.c  QTMRAM.h  libctru.c  libn3ds.c
